--- a/include/votca/ctp/CMakeLists.txt
+++ b/include/votca/ctp/CMakeLists.txt
@@ -1,2 +1,4 @@
-file(GLOB_RECURSE VOTCA_HEADERS *.h)
+configure_file(votca_ctp_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_ctp_config.h)
+
+file(GLOB_RECURSE VOTCA_HEADERS *.h ${CMAKE_CURRENT_BINARY_DIR}/votca_ctp_config.h)
 install(FILES ${VOTCA_HEADERS} DESTINATION include/votca/ctp)
