--- a/share/doc/Doxyfile.in
+++ b/share/doc/Doxyfile.in
@@ -609,6 +609,7 @@ EXCLUDE_SYMLINKS       = NO
 
 EXCLUDE_PATTERNS       = */.hg/* 
 EXCLUDE_PATTERNS      += */CMakeFiles/* 
+EXCLUDE_PATTERNS      += *.py
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names 
 # (namespaces, classes, functions, etc.) that should be excluded from the 
