Commit before computer implodes

--- a/scripts/ctp_testsuite.in
+++ b/scripts/ctp_testsuite.in
@@ -583,7 +583,7 @@ def GenerateNodeDict(node, path='', abbreviate=False):
 cprint = CPrint()
 suite = Suite(TESTSUITEXML, OPTIONS)
 if OPTIONS.listonly:
-	print '{0}{1}\n'.format(VOTCAHEADER, PROGTITLE)
+	print '{0}'.format(VOTCAHEADER)
 	suite.ListTests()
 	okquit()
 if OPTIONS.compareonly:
