--- a/manual/fig/Makefile
+++ b/manual/fig/Makefile
@@ -4,7 +4,7 @@ FIGPICS :=
 AGRPICS :=
 GPPICS  := 
 SVGPICS :=
-SUBDIRS := workflow reorganization_energy chemical_structure idft_flow
+SUBDIRS := workflow reorganization_energy chemical_structure idft_flow workflow_practical
 LOCALCLEAN :=
 
 include ../Makefile.incl
