gsl has priority to MKL

--- a/include/votca/ctp/votca_ctp_config.h.in
+++ b/include/votca/ctp/votca_ctp_config.h.in
@@ -8,10 +8,10 @@
 
 #define NDEBUG
 
-#if defined(MKL)
-    #include <votca/ctp/mkl_boost_ublas_matrix_prod.h>
-#elif defined(GSL)
+#if defined(GSL)
     #include <votca/ctp/gsl_boost_ublas_matrix_prod.h>
+#elif defined(MKL)
+    #include <votca/ctp/mkl_boost_ublas_matrix_prod.h>
 #endif
 
 #endif // _VOTCA_CTP_CONFIG_H
