--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,10 @@ set (BOOST_LIBRARIES ${Boost_THREAD_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${
 set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
 string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" BOOST_LIBS_PKG ${BOOST_LIBRARIES})
 
+option(BUILD_MANPAGES "Build manpages (might lead to problem on system without rpath" ON)
+#define this target here, so that individual man pages can append to it.
+add_custom_target(manpages ALL)
+
 #message(STATUS "BOOST_LIBRARIES='${BOOST_LIBRARIES}'")
 
 find_package(VOTCA_TOOLS REQUIRED)
@@ -133,3 +137,4 @@ add_subdirectory(src/tools)
 #add_subdirectory(src/dipro)
 #add_subdirectory(share/scripts/dipro) 
 add_subdirectory(share)  
+add_subdirectory(share/man)
