--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,16 +1,23 @@
-add_executable(ctp_map ctp_map.cc Md2QmEngine.cc)
-target_link_libraries(ctp_map votca_ctp ${BOOST_LIBRARIES})
+foreach(PROG ctp_map ctp_run ctp_tools ctp_parallel ctp_dump)
+  file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
 
-add_executable(ctp_run ctp_run.cc)
-target_link_libraries(ctp_run votca_ctp ${BOOST_LIBRARIES})
+  if( ${PROG} STREQUAL "ctp_map" )
+     add_executable(ctp_map ctp_map.cc Md2QmEngine.cc)
+  else()
+     add_executable(${PROG} ${${PROG}_SOURCES})
+  endif()
 
-add_executable(ctp_tools ctp_tools.cc)
-target_link_libraries(ctp_tools votca_ctp ${BOOST_LIBRARIES})
+  target_link_libraries(${PROG} votca_ctp ${BOOST_LIBRARIES})
+  install(TARGETS ${PROG} RUNTIME DESTINATION bin)
 
-add_executable(ctp_parallel ctp_parallel.cc)
-target_link_libraries(ctp_parallel votca_ctp ${BOOST_LIBRARIES})
+  if (BUILD_MANPAGES)
+     add_custom_command(OUTPUT ${PROG}.man
+       COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${PROG} --man > ${PROG}.man
+       COMMENT "Building ${PROG} manpage"
+       DEPENDS ${PROG})
+     add_custom_target(${PROG}_manpage DEPENDS ${PROG}.man)
+     add_dependencies(manpages ${PROG}_manpage)
+     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROG}.man DESTINATION ${MAN}/man1 RENAME ${PROG}.1)
+  endif (BUILD_MANPAGES)
+endforeach(PROG)
 
-add_executable(ctp_dump ctp_dump.cc)
-target_link_libraries(ctp_dump votca_ctp ${BOOST_LIBRARIES})
-
-install(TARGETS ctp_map ctp_dump ctp_tools ctp_run ctp_parallel RUNTIME DESTINATION bin)
