fix in a cmakefile

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -12,7 +12,7 @@ foreach(PROG ctp_map ctp_run ctp_tools ctp_parallel ctp_dump)
 
   if (BUILD_MANPAGES)
      add_custom_command(OUTPUT ${PROG}.man
-       COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${PROG} --man > ${PROG}.man
+       COMMAND ${PROG} --man > ${PROG}.man
        COMMENT "Building ${PROG} manpage"
        DEPENDS ${PROG})
      add_custom_target(${PROG}_manpage DEPENDS ${PROG}.man)
