--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,6 @@ include(CheckCXXCompilerFlag)
 ########################################################################
 option(BUILD_SHARED_LIBS "Build shared libs" ON)
 if (NOT DEFINED LIB)
-#  if (CMAKE_SIZEOF_VOID_P MATCHES "8")
-#    set( LIB_SUFFIX "64" )
-#  endif(CMAKE_SIZEOF_VOID_P MATCHES "8")
-#  set(LIB "lib${LIB_SUFFIX}")
   set(LIB "lib")
 endif(NOT DEFINED LIB)
 if (NOT DEFINED MAN)
@@ -41,26 +37,15 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 ########################################################################
 #Find external packages
 ########################################################################
-option(EXTERNAL_BOOST "Use external boost" ON)
-if (EXTERNAL_BOOST)
-  find_package(Boost 1.39.0 COMPONENTS program_options serialization )
-  if(NOT Boost_FOUND)
-    message(FATAL_ERROR "Boost not found,  make sure you have also installed boost and it's dev package or use our internal replacement, if you have built tools with -DEXTERNAL_BOOST=OFF and set it here as well")
-  endif(NOT Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIRS})
-  set (BOOST_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SERIALIZATION_LIBRARY} )
-  set (BOOST_PKG)
-  set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
-  string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" BOOST_LIBS_PKG ${BOOST_LIBRARIES})
-else(EXTERNAL_BOOST)
-  find_package(VOTCA_BOOST REQUIRED)
-  include_directories(${VOTCA_BOOST_INCLUDE_DIRS})
-  set (BOOST_LIBRARIES ${VOTCA_BOOST_LIBRARIES})
-  set (BOOST_PKG "libvotca_boost")
-  set (BOOST_INCLUDE_DIR_PKG)
-  set (BOOST_LIB_PKG)
-  set (BOOST_LIB_DIR_PKG)
-endif(EXTERNAL_BOOST)
+find_package(Boost 1.39.0 REQUIRED COMPONENTS program_options serialization )
+include_directories(${Boost_INCLUDE_DIRS})
+set (BOOST_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SERIALIZATION_LIBRARY} )
+set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
+string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" BOOST_LIBS_PKG ${BOOST_LIBRARIES})
+
+option(BUILD_MANPAGES "Build manpages (might lead to problem on system without rpath" ON)
+#define this target here, so that individual man pages can append to it.
+add_custom_target(manpages ALL)
 
 find_package(VOTCA_TOOLS REQUIRED)
 if(NOT VOTCA_TOOLS_HAS_SQLITE3)
