current binary dir is back

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -7,7 +7,7 @@ foreach(PROG votca_property)
 
   if (BUILD_MANPAGES)
      add_custom_command(OUTPUT ${PROG}.man
-       COMMAND ${PROG} --man > ${PROG}.man
+       COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${PROG} --man > ${PROG}.man
        COMMENT "Building ${PROG} manpage"
        DEPENDS ${PROG})
      add_custom_target(${PROG}_manpage DEPENDS ${PROG}.man)
