fixed out of source build

--- a/src/libtools/CMakeLists.txt
+++ b/src/libtools/CMakeLists.txt
@@ -52,8 +52,11 @@ else(WITH_SQLITE3)
   set(VOTCA_SQL_SOURCES)
 endif(WITH_SQLITE3)
 
-#configure_file(votca_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h)
+#for hgversion.h
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
+#for votca_config.h
+include_directories(${CMAKE_BINARY_DIR}/include/votca/tools)
 
 add_custom_target(hgversion COMMAND ${CMAKE_COMMAND} -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/hgversion.cmake)
 set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES hgversion.h)
