--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ endif(NOT DEFINED DATA)
 #this has to be the first include directive
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+#for votca_config.h
+include_directories(${CMAKE_BINARY_DIR}/include)
+
 ########################################################################
 #Find external packages
 ########################################################################
