--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-find_package(Boost 1.39.0 REQUIRED COMPONENTS program_options )
+find_package(Boost 1.39.0 REQUIRED COMPONENTS program_options filesystem )
 include_directories(${Boost_INCLUDE_DIRS})
-set (BOOST_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY})
+set (BOOST_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
 string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" BOOST_LIBS_PKG ${BOOST_LIBRARIES})
 
