--- a/include/votca/tools/votca_config.h.in
+++ b/include/votca/tools/votca_config.h.in
@@ -10,6 +10,9 @@
 /* Compile with MKL if intell libraries are installed */
 #cmakedefine MKL
 
+/* Compile with Eigen if intell libraries are installed */
+#cmakedefine EIGEN
+
 /* Version number of package */
 #define VERSION "@PROJECT_VERSION@"
 
