--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,10 @@ syntax:glob
 
 *~
 Makefile
+rules.ninja
+build.ninja
+.ninja_*
+build
 include/votca/tools/votca_config.h
 src/libtools/hgversion.h
 .project
