--- a/include/votca/ctp/votca_ctp_config.h.in
+++ b/include/votca/ctp/votca_ctp_config.h.in
@@ -1,12 +1,22 @@
 #ifndef _VOTCA_CTP_CONFIG_H
 #define _VOTCA_CTP_CONFIG_H
 
+/* OpenMP */
+#cmakedefine OMP
+#if defined(OMP)
+   #include <omp.h>
+   #define OMP
+#endif
+
+
 /* Linear algebra packages */
 #cmakedefine EIGEN
 #cmakedefine MKL
 #cmakedefine GSL
 
 #define NDEBUG
+
+
 
 #if defined(GSL)
     #include <votca/ctp/gsl_boost_ublas_matrix_prod.h>
