--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -11,7 +11,7 @@ if(WITH_DIPRO)
   endforeach(SCRIPT)
 endif(WITH_DIPRO)
 
-foreach(SCRIPT ctp_testsuite ctp_update)
+foreach(SCRIPT ctp_testsuite ctp_update ctp_update_exciton)
   configure_file(${SCRIPT}.in ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out @ONLY)
   add_custom_command(OUTPUT ${SCRIPT} DEPENDS ${SCRIPT})
   add_custom_target(${SCRIPT} ALL COMMAND ${CMAKE_COMMAND}
