added exciton update

--- a/scripts/ctp_update_exciton.in
+++ b/scripts/ctp_update_exciton.in
@@ -74,18 +74,18 @@ conn = sqlite3.connect(OPTIONS.sqlfile)
 port = conn.cursor()
 
 try:
-	port.execute('ALTER TABLE segments ADD COLUMN UnXnNs DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN UnXnNt DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN UxNxXs DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN UxNxXt DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN UxXnNs DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN UxXnNt DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN eSinglet DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN eTriplet DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN has_s DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN has_t DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN occPs DOUBLE PRECISION;')
-	port.execute('ALTER TABLE segments ADD COLUMN occPt DOUBLE PRECISION;')
+	port.execute('ALTER TABLE segments ADD COLUMN UnXnNs REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN UnXnNt REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN UxNxXs REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN UxNxXt REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN UxXnNs REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN UxXnNt REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN eSinglet REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN eTriplet REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN has_s REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN has_t REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN occPs REAL;')
+	port.execute('ALTER TABLE segments ADD COLUMN occPt REAL;')
 	port.execute('UPDATE segments SET UnXnNs=0,UnXnNt=0,UxNxXs=0,UxNxXt=0,UxXnNs=0,UxXnNt=0,eSinglet=0,eTriplet=0,has_s=0,has_t=0,occPs=-1,occPt=-1;')
 
 
@@ -95,16 +95,16 @@ except:
 	print "'segments' table already up-to-date"
 	
 try:
-	port.execute('ALTER TABLE pairs ADD COLUMN IOs DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN IOt DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN has_s DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN has_t DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN rate12s DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN rate21s DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN rate12t DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN rate21t DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN Jeff2s DOUBLE PRECISION;')
-	port.execute('ALTER TABLE pairs ADD COLUMN Jeff2t DOUBLE PRECISION;')
+	port.execute('ALTER TABLE pairs ADD COLUMN lOs REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN lOt REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN has_s REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN has_t REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN rate12s REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN rate21s REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN rate12t REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN rate21t REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN Jeff2s REAL;')
+	port.execute('ALTER TABLE pairs ADD COLUMN Jeff2t REAL;')
 	port.execute('UPDATE pairs SET IOs=0,IOt=0,rate12s=0,rate12t=0,rate21s=0,rate21t=0,Jeff2s=0,Jeff2t=0,has_s=0,has_t=0;')
 except:
 	print "'pairs' table already up-to-date"
