--- a/manual/.hgignore
+++ b/manual/.hgignore
@@ -22,3 +22,19 @@ fig/reorganization_energy/monomer_parabolas.eps
 fig/workflow/figtex2eps-preamble.tex
 fig/workflow/workflow.eps
 fig/workflow/workflow.fd
+literature.bib
+literature_short.bib
+manual.bbl
+manual.blg
+manual.brf
+manual.dvi
+manual.fdb_latexmk
+manual.idx
+manual.ilg
+manual.ind
+manual.log
+manual.out
+manual.pdf
+manual.toc
+reference/programs/*.tex
+reference/*/*.xml.tex
