.travis.yml: fixed typo

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 
 env: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
   - WERROR=yes J=4 #J>4 triggers an internal compiler in travis' g++
-  - CTP=YES WERROR=yes J=4
+  - CTP=yes WERROR=yes J=4
   - J=1
   - BDIR=build J=4
   - BDIR=build J=1
