--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-syntax: glob
-
 *~
 libvotca*.pc
 libvotca*.a
@@ -14,7 +12,7 @@ netbeans/libmoo/nbproject/Makefile-variables.mk
 netbeans/libmoo/nbproject/Package-Debug.bash
 netbeans/libmoo/nbproject/Package-Release.bas
 
-CMakeFiles/*
+CMakeFiles
 cmake_install.cmake
 CMakeCache.txt
 install_manifest.txt
