--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-syntax: glob
-
 *~
 Makefile
 
@@ -43,7 +41,7 @@ netbeans/ctp_map/nbproject/Package-Release.bash
 netbeans/ctp_run/nbproject/Package-Debug.bash
 netbeans/ctp_run/nbproject/Package-Release.bash
 
-CMakeFiles/*
+CMakeFiles
 cmake_install.cmake
 CMakeCache.txt
 install_manifest.txt
