--- a/share/doc/CMakeLists.txt
+++ b/share/doc/CMakeLists.txt
@@ -1,6 +1,10 @@
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
   configure_file(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
-  add_custom_target(html COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile 
-    COMMENT "Build doxygen documentation")
+  add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
+    COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    COMMENT "Build doxygen documentation") 
+  add_custom_target(html DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/html/index.html)
+  set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES html)
 endif (DOXYGEN_FOUND)
