--- a/src/libctp/CMakeLists.txt
+++ b/src/libctp/CMakeLists.txt
@@ -14,7 +14,7 @@ endif(WITH_GSL)
 configure_file(votca_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_custom_target(hgversion COMMAND ${CMAKE_COMMAND} -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
+add_custom_target(hgversion-ctp COMMAND ${CMAKE_COMMAND} -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
   -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
   -DMERCURIAL_EXECUTABLE="${MERCURIAL_EXECUTABLE}"
   -P ${CMAKE_MODULE_PATH}/hgversion.cmake)
@@ -26,7 +26,7 @@ file(GLOB_RECURSE NOT_VOTCA_SOURCES version_nb.cc segmenttype.cc)
 list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 
 add_library(votca_ctp  ${VOTCA_SOURCES})
-add_dependencies(votca_ctp hgversion)
+add_dependencies(votca_ctp hgversion-ctp)
 target_link_libraries(votca_ctp ${VOTCA_CSG_LIBRARIES}  ${GSL_LIBRARIES} ${VOTCA_MOO_LIBRARIES} ${VOTCA_TOOLS_LIBRARIES} ${BOOST_LIBRARIES})
 install(TARGETS votca_ctp LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
 
